--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,5 +2,40 @@
     "brandName": "ShareIt",
     "searchPlaceholder": "Search",
     "searchButton": "Search",
-    "language": "En "
-  }
+    "language": "En ",
+    "hello": "Hello",
+    "logout": "Logout",
+    "loading": "Loading...",
+    "collectionPlaceholder": "You don't have collections. Create your first collection!",
+    "signIn": "SignIn",
+    "register": "Register",
+    "tabsYourCollection": "Your collections",
+    "tabsCreateCollection": "Create new collection",
+    "collectionName": "Enter new collection name",
+    "collectionCategory": "Choose category",
+    "categorySet": "Select category",
+    "fieldTitle": "Enter title for Field",
+    "setField": "not selected",
+    "createButton": "Create collection",
+    "tabsAccountSettings": "Account settings",
+    "tabsAccountContent": "This section is being updated",
+    "markdownPlaceholder": "Enter text with Markdown support",
+    "firstFieldOption": "Books",
+    "secondFieldOption": "Films",
+    "thirdFieldOption": "Baseball cards",
+    "fourFieldOption": "Albums",
+    "fiveFieldOption": "Other",
+    "firstFieldType": "Number",
+    "secondFieldType": "Checkbox",
+    "thirdFieldType": "Text area",
+    "fourFieldType": "Long description",
+    "fiveFieldType": "Date",
+    "createNewItem": "Create new item in \"{{collName}}\"",
+    "numberPlaceholder": "This is a number field",
+    "textareaPlaceholder": "Enter {{fieldName}}",
+    "submitButton": "Create item",
+    "size": "Size: {{count}}",
+    "emptyCollection": "Empty collection",
+    "createdOn": "Create: {{date}}",
+    "seeItems": "See items"
+}
