--- a/src/locales/kz/translation.json
+++ b/src/locales/kz/translation.json
@@ -2,5 +2,40 @@
     "brandName": "ShareIt",
     "searchPlaceholder": "Іздеу",
     "searchButton": "Іздеу",
-    "language": "Тіл"
+    "language": "Тіл",
+    "hello": "Сәлем",
+    "logout": "Шығу",
+    "loading": "Коллекцияларды жүктеу...",
+    "collectionPlaceholder": "Сізде коллекциялар жоқ. Бірінші топтамаңызды жасаңыз!",
+    "signIn": "Кіру",
+    "register": "Тіркелу",
+    "tabsYourCollection": "Сіздің коллекцияларыңыз",
+    "tabsCreateCollection": "Жаңа топтама жасаңыз",
+    "collectionName": "Жинақтың атын енгізіңіз",
+    "collectionCategory": "Санатты таңдаңыз",
+    "categorySet": "Санатты",
+    "fieldTitle": "Өріс үшін тақырыпты енгізіңіз",
+    "setField": "таңдалмаған",
+    "createButton": "Коллекция жасау",
+    "tabsAccountSettings": "Тіркелгі параметрлері",
+    "tabsAccountContent": "Бұл бөлім жаңартылуда",
+    "markdownPlaceholder": "Markdown қолдайтын мәтінді енгізіңіз",
+    "firstFieldOption": "Кітаптар",
+    "secondFieldOption": "Фильмдер",
+    "thirdFieldOption": "Бейсбол карталары",
+    "fourFieldOption": "Альбомдар",
+    "fiveFieldOption": "Басқа",
+    "firstFieldType": "Сан",
+    "secondFieldType": "Құсбелгі",
+    "thirdFieldType": "Мәтін өрісі",
+    "fourFieldType": "Ұзақ сипаттама",
+    "fiveFieldType": "Күні",
+    "createNewItem": "\"{{collName}}\" жаңа элемент жасаңыз",
+    "numberPlaceholder": "Бұл сандық өріс",
+    "textareaPlaceholder": "{{fieldName}} енгізіңіз",
+    "submitButton": "Элемент жасау",
+    "size": "Өлшемі: {{count}}",
+    "emptyCollection": "Бос коллекция",
+    "createdOn": "Жасалған күні: {{date}}",
+    "seeItems": "Толығырақ"
   }
