--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -2,5 +2,40 @@
     "brandName": "ShareIt",
     "searchPlaceholder": "Поиск",
     "searchButton": "Поиск",
-    "language": "Ру "
+    "language": "Ру ",
+    "hello": "Привет",
+    "logout": "Выйти",
+    "loading": "Загрузка коллекций...",
+    "collectionPlaceholder": "У вас нет коллекций. Создайте свою первую коллекцию!",
+    "signIn": "Войти",
+    "register": "Регистрация",
+    "tabsYourCollection": "Ваши коллекции",
+    "tabsCreateCollection": "Создайте новую коллекцию",
+    "collectionName": "Введите название коллекции",
+    "collectionCategory": "Выберите категорию",
+    "categorySet": "Выберите",
+    "fieldTitle": "Введите название поля",
+    "setField": "не выбрано",
+    "createButton": "Создать коллекцию", 
+    "tabsAccountSettings": "Настройки аккаунта",
+    "tabsAccountContent": "Секция в разработке",
+    "markdownPlaceholder": "Введите текст с поддержкой Markdown",
+    "firstFieldOption": "Книги",
+    "secondFieldOption": "Фильмы",
+    "thirdFieldOption": "Бейсбольные карточки",
+    "fourFieldOption": "Альбомы",
+    "fiveFieldOption": "Другое",
+    "firstFieldType": "Число",
+    "secondFieldType": "Флажок",
+    "thirdFieldType": "Текстовое поле",
+    "fourFieldType": "Длинное описание",
+    "fiveFieldType": "Дата",
+    "createNewItem": "Создать новый элемент в \"{{collName}}\"",
+    "numberPlaceholder": "Это числовое поле",
+    "textareaPlaceholder": "Введите {{fieldName}}",
+    "submitButton": "Создать элемент",
+    "size": "Размер: {{count}}",
+    "emptyCollection": "Пустая коллекция",
+    "createdOn": "Создано: {{date}}",
+    "seeItems": "Подробнее"
   }
